Fixed the overflow issue with the desktop folderview

--- a/apps/desktop/components/Folder/FolderView.module.css
+++ b/apps/desktop/components/Folder/FolderView.module.css
@@ -21,6 +21,10 @@
   overflow: auto;
 }
 
+.iconsContainer.overflow {
+  overflow: hidden;
+}
+
 .selectionBoxContainer {
   position: absolute;
   width: 100%;
